--- a/app/views/products/_header.html.haml
+++ b/app/views/products/_header.html.haml
@@ -16,7 +16,7 @@
               .icon-text__left カテゴリーから探す
         %ul.mheader__main__bottom__left__category__submenu
           %li
-            = link_to "レディース","/products/category_search/レディース", class:"mheader__main__bottom__left__category__submenu__child"
+            = link_to "レディース","/products/category_search/1", class:"mheader__main__bottom__left__category__submenu__child"
             %ul.mheader__main__bottom__left__category__submenu__child__ladies
               %li
                 = link_to "トップス", root_path, class:"mheader__main__bottom__left__category__submenu__child__ladies__child"
@@ -305,7 +305,7 @@
                   %li
                     = link_to "その他", root_path, class:"mheader__main__bottom__left__category__submenu__child__ladies__child__watch__child"
           %li
-            = link_to "メンズ", root_path, class:"mheader__main__bottom__left__category__submenu__child"
+            = link_to "メンズ", "/products/category_search/2", class:"mheader__main__bottom__left__category__submenu__child"
             %ul.mheader__main__bottom__left__category__submenu__child__mens
               %li
                 = link_to "トップス", root_path, class:"mheader__main__bottom__left__category__submenu__child__mens__child"
@@ -336,7 +336,7 @@
               %li
                 = link_to "その他", root_path, class:"mheader__main__bottom__left__category__submenu__child__mens__child"            
           %li
-            = link_to "ベビー•キッズ", root_path, class:"mheader__main__bottom__left__category__submenu__child"
+            = link_to "ベビー•キッズ", "/products/category_search/3", class:"mheader__main__bottom__left__category__submenu__child"
             %ul.mheader__main__bottom__left__category__submenu__child__baby
               %li
                 = link_to "ベビー服(女の子用)~95cm", root_path, class:"mheader__main__bottom__left__category__submenu__child__baby__child"
@@ -367,7 +367,7 @@
               %li
                 = link_to "行事／記念品", root_path, class:"mheader__main__bottom__left__category__submenu__child__baby__child"              
           %li
-            = link_to "インテリア•住まい•小物", root_path, class:"mheader__main__bottom__left__category__submenu__child"
+            = link_to "インテリア•住まい•小物", "/products/category_search/4", class:"mheader__main__bottom__left__category__submenu__child"
             %ul.mheader__main__bottom__left__category__submenu__child__interia
               %li
                 = link_to "キッチン/食器", root_path, class:"mheader__main__bottom__left__category__submenu__child__interia__child" 
@@ -396,7 +396,7 @@
               %li
                 = link_to "その他", root_path, class:"mheader__main__bottom__left__category__submenu__child__interia__child" 
           %li
-            = link_to "本•音楽•ゲーム", root_path, class:"mheader__main__bottom__left__category__submenu__child"
+            = link_to "本•音楽•ゲーム", "/products/category_search/5", class:"mheader__main__bottom__left__category__submenu__child"
             %ul.mheader__main__bottom__left__category__submenu__child__book
               %li
                 = link_to "本", root_path, class:"mheader__main__bottom__left__category__submenu__child__book__child"
@@ -413,7 +413,7 @@
               %li
                 = link_to "テレビゲーム", root_path, class:"mheader__main__bottom__left__category__submenu__child__book__child"
           %li
-            = link_to "おもちゃ•ホビー•グッズ", root_path, class:"mheader__main__bottom__left__category__submenu__child"
+            = link_to "おもちゃ•ホビー•グッズ", "/products/category_search/6", class:"mheader__main__bottom__left__category__submenu__child"
             %ul.mheader__main__bottom__left__category__submenu__child__toy
               %li
                 = link_to "おもちゃ", root_path, class:"mheader__main__bottom__left__category__submenu__child__toy__child"
@@ -438,7 +438,7 @@
               %li
                 = link_to "その他", root_path, class:"mheader__main__bottom__left__category__submenu__child__toy__child"
           %li
-            = link_to "コスメ•香水•美容", root_path, class:"mheader__main__bottom__left__category__submenu__child"
+            = link_to "コスメ•香水•美容", "/products/category_search/7", class:"mheader__main__bottom__left__category__submenu__child"
             %ul.mheader__main__bottom__left__category__submenu__child__cos
               %li
                 = link_to "ベースメイク", root_path, class:"mheader__main__bottom__left__category__submenu__child__cos__child"
@@ -463,7 +463,7 @@
               %li
                 = link_to "その他", root_path, class:"mheader__main__bottom__left__category__submenu__child__cos__child"
           %li
-            = link_to "家電•スマホ•カメラ", root_path, class:"mheader__main__bottom__left__category__submenu__child"
+            = link_to "家電•スマホ•カメラ", "/products/category_search/8", class:"mheader__main__bottom__left__category__submenu__child"
             %ul.mheader__main__bottom__left__category__submenu__child__appliance
               %li
                 = link_to "スマートフォン/携帯電話", root_path, class:"mheader__main__bottom__left__category__submenu__child__appliance__child"
@@ -486,7 +486,7 @@
               %li
                 = link_to "その他", root_path, class:"mheader__main__bottom__left__category__submenu__child__appliance__child"
           %li
-            = link_to "スポーツ•レジャー", root_path, class:"mheader__main__bottom__left__category__submenu__child"
+            = link_to "スポーツ•レジャー", "/products/category_search/9", class:"mheader__main__bottom__left__category__submenu__child"
             %ul.mheader__main__bottom__left__category__submenu__child__sports
               %li
                 = link_to "ゴルフ", root_path, class:"mheader__main__bottom__left__category__submenu__child__sports__child"
@@ -513,7 +513,7 @@
               %li
                 = link_to "その他", root_path, class:"mheader__main__bottom__left__category__submenu__child__sports__child"
           %li
-            = link_to "ハンドメイド", root_path, class:"mheader__main__bottom__left__category__submenu__child"
+            = link_to "ハンドメイド", "/products/category_search/10", class:"mheader__main__bottom__left__category__submenu__child"
             %ul.mheader__main__bottom__left__category__submenu__child__handmade
               %li
                 = link_to "アクセサリー(女性用)", root_path, class:"mheader__main__bottom__left__category__submenu__child__handmade__child"
@@ -534,7 +534,7 @@
               %li
                 = link_to "その他", root_path, class:"mheader__main__bottom__left__category__submenu__child__handmade__child"              
           %li
-            = link_to "チケット", root_path, class:"mheader__main__bottom__left__category__submenu__child"
+            = link_to "チケット", "/products/category_search/11", class:"mheader__main__bottom__left__category__submenu__child"
             %ul.mheader__main__bottom__left__category__submenu__child__ticket
               %li
                 = link_to "音楽", root_path, class:"mheader__main__bottom__left__category__submenu__child__ticket__child"
@@ -553,7 +553,7 @@
               %li
                 = link_to "その他", root_path, class:"mheader__main__bottom__left__category__submenu__child__ticket__child"            
           %li
-            = link_to "自転車•オートバイ", root_path, class:"mheader__main__bottom__left__category__submenu__child"
+            = link_to "自転車•オートバイ", "/products/category_search/12", class:"mheader__main__bottom__left__category__submenu__child"
             %ul.mheader__main__bottom__left__category__submenu__child__bike
               %li
                 = link_to "自転車本体", root_path, class:"mheader__main__bottom__left__category__submenu__child__bike__child"
@@ -570,7 +570,7 @@
               %li
                 = link_to "オートバイアクセサリー", root_path, class:"mheader__main__bottom__left__category__submenu__child__bike__child"
           %li
-            = link_to "その他", root_path, class:"mheader__main__bottom__left__category__submenu__child"
+            = link_to "その他", "/products/category_search/13", class:"mheader__main__bottom__left__category__submenu__child"
             %ul.mheader__main__bottom__left__category__submenu__child__other
               %li
                 = link_to "まとめ売り", root_path, class:"mheader__main__bottom__left__category__submenu__child__other__child"
@@ -591,7 +591,7 @@
               %li
                 = link_to "その他", root_path, class:"mheader__main__bottom__left__category__submenu__child__other__child"
           %li
-            = link_to "カテゴリ一覧", root_path, class:"mheader__main__bottom__left__category__submenu__child"
+            = link_to "カテゴリ一覧", "/products/category_search/14", class:"mheader__main__bottom__left__category__submenu__child"
         .mheader__main__bottom__left__bland
           = link_to root_path, class:"mheader__main__bottom__left__bland__inside" do
             %i.fas.fa-tags
