--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -53,7 +53,7 @@
       .imain__main__product__box
         .imain__main__product__box__menu
           .imain__main__product__box__menu__text レディース新着アイテム
-          =link_to "もっと見る ＞", "#", class: "imain__main__product__box__menu__link"
+          =link_to "もっと見る ＞", "/products/category_search/1", class: "imain__main__product__box__menu__link"
         .imain__main__product__box__item
           %ul.imain__main__product__box__item__list
             -if @products_l
@@ -64,7 +64,7 @@
       .imain__main__product__box
         .imain__main__product__box__menu
           .imain__main__product__box__menu__text メンズ
-          =link_to "もっと見る ＞", "#", class: "imain__main__product__box__menu__link"
+          =link_to "もっと見る ＞", "/products/category_search/2", class: "imain__main__product__box__menu__link"
         .imain__main__product__box__item
           %ul.imain__main__product__box__item__list
             -if @products_m
@@ -75,7 +75,7 @@
       .imain__main__product__box
         .imain__main__product__box__menu
           .imain__main__product__box__menu__text 家電・スマホ・カメラ
-          =link_to "もっと見る ＞", "#", class: "imain__main__product__box__menu__link"
+          =link_to "もっと見る ＞", "/products/category_search/8", class: "imain__main__product__box__menu__link"
         .imain__main__product__box__item
           %ul.imain__main__product__box__item__list
             -if @products_d
@@ -86,7 +86,7 @@
       .imain__main__product__box
         .imain__main__product__box__menu
           .imain__main__product__box__menu__text おもちゃ・ホビー・グッズ
-          =link_to "もっと見る ＞", "#", class: "imain__main__product__box__menu__link"
+          =link_to "もっと見る ＞", "/products/category_search/6", class: "imain__main__product__box__menu__link"
         .imain__main__product__box__item
           %ul.imain__main__product__box__item__list
             -if @products_h
@@ -109,7 +109,7 @@
       .imain__main__product__box
         .imain__main__product__box__menu
           .imain__main__product__box__menu__text ベビー・キッズ
-          =link_to "もっと見る ＞", "#", class: "imain__main__product__box__menu__link"
+          =link_to "もっと見る ＞", "/products/category_search/3", class: "imain__main__product__box__menu__link"
         .imain__main__product__box__item
           %ul.imain__main__product__box__item__list
             -if @products_k
@@ -120,7 +120,7 @@
       .imain__main__product__box
         .imain__main__product__box__menu
           .imain__main__product__box__menu__text スポーツ・レジャー
-          =link_to "もっと見る ＞", "#", class: "imain__main__product__box__menu__link"
+          =link_to "もっと見る ＞", "/products/category_search/9", class: "imain__main__product__box__menu__link"
         .imain__main__product__box__item
           %ul.imain__main__product__box__item__list
             -if @products_s
@@ -130,7 +130,7 @@
       .imain__main__product__box
         .imain__main__product__box__menu
           .imain__main__product__box__menu__text 本・音楽・ゲーム
-          =link_to "もっと見る ＞", "#", class: "imain__main__product__box__menu__link" 
+          =link_to "もっと見る ＞", "/products/category_search/5", class: "imain__main__product__box__menu__link" 
         .imain__main__product__box__item
           %ul.imain__main__product__box__item__list
             -if @products_b
@@ -141,7 +141,7 @@
       .imain__main__product__box
         .imain__main__product__box__menu
           .imain__main__product__box__menu__text コスメ・香水・美容
-          =link_to "もっと見る ＞", "#", class: "imain__main__product__box__menu__link"
+          =link_to "もっと見る ＞", "/products/category_search/7", class: "imain__main__product__box__menu__link"
         .imain__main__product__box__item
           %ul.imain__main__product__box__item__list
             -if @products_c
