--- a/app/assets/stylesheets/new.scss
+++ b/app/assets/stylesheets/new.scss
@@ -641,3 +641,73 @@ pre{
     margin-top: 8px;
   }
 }
+
+//edit.jsのscss
+
+.input_area{
+  height: 137px;
+  width: 100%;
+  background-color: #f5f5f5;
+  border:dotted 1px gray;
+  text-align: center;
+  cursor: pointer;
+  margin-bottom: 10px;
+}
+.upload-image{
+  display: none;
+}
+.img_view{
+  background-color: #F5F5F5;
+  margin-right: 10px;
+  margin-bottom: 5px;
+  display: inline-block;
+}
+.dropzone-container{
+  display: flex;
+}
+.dropzone-area{
+  width: 100%;
+  display: inline-block;
+}
+.dropzone-area2{
+  display: none;
+}
+.btn_wrapper{
+  display: flex;
+  color: #0099e8;
+  text-align: center;
+}
+.btn_edit{
+  display: inline-block;
+  padding: 5px 10px;
+  border-right: 1px solid #eee;
+  font-size: 14px;
+  font-weight: 400;
+  font-family: "Source Sans Pro", Helvetica, Arial, 游ゴシック体, YuGothic, メイリオ, Meiryo, sans-serif;
+  cursor: pointer;
+}
+.btn_delete{
+  font-size: 14px;
+  font-weight: 400;
+  font-family: "Source Sans Pro", Helvetica, Arial, 游ゴシック体, YuGothic, メイリオ, Meiryo, sans-serif;
+  display: inline-block;
+  padding: 5px 8px;
+  cursor: pointer;
+}
+.hidden{
+  display: none;
+}
+
+img {
+  height: 100px;
+  width: 100px;
+  padding-top: 20px;
+}
+
+.item__img__dropzone {
+  display: flex;
+}
+.item__img__dropzone2{
+  display: none;
+}
+
