--- a/app/assets/stylesheets/search.scss
+++ b/app/assets/stylesheets/search.scss
@@ -182,6 +182,7 @@
         font-family: "Source Sans Pro", Helvetica, Arial, 游ゴシック体, YuGothic, メイリオ, Meiryo, sans-serif;
         display: flex;
         margin: 0 0 8px;
+        text-align: right;
         &__search{
           font-size: 22px;
           line-height: 31px;
