--- a/app/views/products/p_transaction.html.haml
+++ b/app/views/products/p_transaction.html.haml
@@ -17,7 +17,7 @@
               取引中
             = link_to p_soldout_products_path, class: "pmain__center--right3" do
               売却済み
-          -if @products.to_a[0].saler_id == current_user.id && @products.to_a[0].auction_id.present?
+          -if @products.present? && @products.to_a[0].saler_id == current_user.id && @products.to_a[0].auction_id.present?
             - @products.each do |product|
               = link_to product_path(product),class:"item_content" do
                 .item_content__image
