--- a/app/assets/stylesheets/show.scss
+++ b/app/assets/stylesheets/show.scss
@@ -23,6 +23,33 @@
         &__big{
           position: relative;
         }
+        &__badge{
+          &__text{
+            top: 36px;
+            font-size: 28px;
+            position: absolute;
+            left: 0;
+            z-index: 2;
+            color: #fff;
+            transform: rotate(-45deg);
+            letter-spacing: 2px;
+            font-weight: 600;
+
+          }
+          &:after{
+            content: "";
+            border-width: 120px 120px 0 0;
+            border-color: #ea352d transparent transparent transparent;
+            display: block;
+            top: 0;
+            left: 0;
+            z-index: 1;
+            width: 0;
+            height: 0;
+            border-style: solid;
+            position: absolute;
+          }
+        }
         &__small{
           margin: 0;
           padding: 0;
