--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -10,10 +10,14 @@
     .box__container__main
       .box__container__main__photo
         .box__container__main__photo__all
-          .box__container__main__photo__all__big
-            = image_tag @product.product_images[0].image.to_s,size:"300x300",id:"mainphoto" 
-          .box__container__main__photo__all__badge
-            .box__container__main__photo__all__badge__text SOLD
+          - if @product.buyer_id 
+            .box__container__main__photo__all__big
+              = image_tag @product.product_images[0].image.to_s,size:"300x300",id:"mainphoto" 
+            .box__container__main__photo__all__badge
+              .box__container__main__photo__all__badge__text SOLD
+          - else
+            .box__container__main__photo__all__big
+              = image_tag @product.product_images[0].image.to_s,size:"300x300",id:"mainphoto" 
 
           .box__container__main__photo__all__small
             .box__container__main__photo__all__small__list
