--- a/app/assets/stylesheets/show.scss
+++ b/app/assets/stylesheets/show.scss
@@ -156,6 +156,15 @@
       text-align: center;
       color: white;
     }
+    &__btn1{
+      display: block;
+      margin-top: 16px;
+      background: #AAAAAA;
+      font-size: 24px;line-height: 60px;
+      font-weight: 600;
+      text-align: center;
+      color: white;
+    }
   }
   &__explanation{
     padding: 32px 0 0;
