setting_renger_file

--- a/app/views/products/_index.html.haml
+++ b/app/views/products/_index.html.haml
@@ -10,8 +10,7 @@
             =product.price
           - if product.buyer_id 
             = image_tag product.product_images[0].image.to_s, class: "imain__main__product__box__item__list__data__size__link__figure__information__image" 
-            .imain__main__product__box__item__list__data__size__link__figure__information__sold
-              %span.imain__main__product__box__item__list__data__size__link__figure__information__sold__text SOLD
+            = render "index_sold_badge"
           - else
             = image_tag product.product_images[0].image.to_s, class: "imain__main__product__box__item__list__data__size__link__figure__information__image" 
             
