--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -264,6 +264,39 @@
   font-weight: 400;
   font-family: Arial, 游ゴシック体, YuGothic, メイリオ, Meiryo, sans-serif;
 
-  
+}
+@mixin index_sold_badge {
+  height: 60px;
+  width: 60px;
+  position: relative;
+  display: inline-block;
+  margin: 0;
+  vertical-align: top;
+  left: 0;
+  top: 0;
+}
+@mixin index_sold_text {
+  font-size: 14px;
+  left: 3px;
+  top: 14px;
+  color: #fff;
+  font-weight: 600;
+  position: absolute;
+  transform: rotate(-45deg);
+  z-index: 2;
+}
+
+@mixin index_sold_text_after{
+  border-color: #ff0211 transparent transparent;
+  border-width: 60px 60px 0 0;
+  border-style: solid;
+  z-index: 1;
+  position: absolute;
+  display: block;
+  width: 0;
+  height: 0;
+  top: 0px;
+  left:0px;
+  content: "";
 }
 
