--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -226,39 +226,13 @@
                           z-index: 1;
                         }
                         &__sold{
-                          height: 60px;
-                          width: 60px;
-                          position: relative;
-                          display: inline-block;
-                          margin: 0;
-                          vertical-align: top;
-                          left: 0;
-                          top: 0;
+                          @include index_sold_badge;
                           &__text{
-                            font-size: 14px;
-                            left: 3px;
-                            top: 14px;
-                            color: #fff;
-                            font-weight: 600;
-                            position: absolute;
-                            transform: rotate(-45deg);
-                            z-index: 2;
+                            @include index_sold_text;
                           }
                             &:after{
-                              content: "";
-                              border-color: #ff0211 transparent transparent;
-                              border-width: 60px 60px 0 0;
-                              position: absolute;
-                              border-style: solid;
-                              display: block;
-                              z-index: 1;
-                              width: 0;
-                              height: 0;
-                              top: 0px;
-                              left:0px;
-
+                              @include index_sold_text_after;
                             }
-                          
                         }
                       }
                     }
