--- a/app/views/products/_products-seach.html.haml
+++ b/app/views/products/_products-seach.html.haml
@@ -1,21 +1,17 @@
-%li.imain__main__product__box__item__list__data
-  .imain__main__product__box__item__list__data__size
-    =link_to product_path(product.id),class: "imain__main__product__box__item__list__data__size__link" do
-      %figure.imain__main__product__box__item__list__data__size__link__figure
-        %figcaption.imain__main__product__box__item__list__data__size__link__figure__figcaption
-          = product.name
-        .imain__main__product__box__item__list__data__size__link__figure__information
+%li.data
+  .data__size
+    =link_to product_path(product.id),class: "data__size__link" do
+      %figure.data__size__link__figure
+        %figcaption.data__size__link__figure__figcaption
+          =product.name
+        .data__size__link__figure__information
           %label.imain__main__product__box__item__list__data__size__link__figure__information__label
             ¥
-            = product.price
+            =product.price
           - if product.buyer_id 
             = image_tag product.product_images[0].image.to_s, class: "imain__main__product__box__item__list__data__size__link__figure__information__image" 
             .imain__main__product__box__item__list__data__size__link__figure__information__sold
               %span.imain__main__product__box__item__list__data__size__link__figure__information__sold__text SOLD
           - else
             = image_tag product.product_images[0].image.to_s, class: "imain__main__product__box__item__list__data__size__link__figure__information__image" 
-            
-              
-              
-              
             
