setting_btn_haml

--- a/app/views/products/_header.html.haml
+++ b/app/views/products/_header.html.haml
@@ -633,7 +633,7 @@
               = image_tag "mypage-background.jpg", class: "mheader__main__bottom__right__list4__submenu__top__user"
               = image_tag"member_photo_noimage_thumb.jpg", class: "mheader__main__bottom__right__list4__submenu__top__figure"
               .mheader__main__bottom__right__list4__submenu__top__name
-                = current_user.nickname
+                -# = current_user.nickname
               .mheader__main__bottom__right__list4__submenu__top__numbers
                 = link_to "", class: "mheader__main__bottom__right__list4__submenu__top__numbers__number1" do
                   評価:
