--- a/app/views/products/edit.html.haml
+++ b/app/views/products/edit.html.haml
@@ -14,27 +14,27 @@
           必須
       .exhibitcontent_main__first--description
         最大10枚までアップロードできます。
-      
-      .item__img__dropzone
-        #preview-edit
-        -# １〜５枚目プレビュー表示
-        .item__img__dropzone__input
-          = f.label :image, for: "upload-image" do
-            .input_area
-              = f.file_field :image, multiple: true, name: 'images[image][]', id: "upload-image", class: "upload-image", 'data-image': 0
-              ドロッグアンドドロップ
-              %br
-              またはクリックしてファイルをアップロード
-              
-      .item__img__dropzone2
-        #preview2-edit
-        -# ６〜１０枚目プレビュー表示
-        .item__img__dropzone2__input2
-          = f.label :image, for: "upload-image" do
-            .input_area
-              ドロッグアンドドロップ
-              %br
-              またはクリックしてファイルをアップロード
+      = f.fields_for :product_images, @product.product_images.first do |image|
+        .item__img__dropzone
+          #preview-edit
+          -# １〜５枚目プレビュー表示
+          .item__img__dropzone__input
+            = f.label :image, for: "upload-image" do
+              .input_area
+                = f.file_field :image, multiple: true, name: 'images[image][]', id: "upload-image", class: "upload-image", 'data-image': 0
+                ドロッグアンドドロップ
+                %br
+                またはクリックしてファイルをアップロード
+                
+        .item__img__dropzone2
+          #preview2-edit
+          -# ６〜１０枚目プレビュー表示
+          .item__img__dropzone2__input2
+            = f.label :image, for: "upload-image" do
+              .input_area
+                ドロッグアンドドロップ
+                %br
+                またはクリックしてファイルをアップロード
       %input.upload-image{ multiple: true, type: "hidden", name: "images[image][]"}/
       %input.hidden{ multiple: true, type: "number", name: "destroy[ids][]"}/
 
