--- a/app/assets/stylesheets/search.scss
+++ b/app/assets/stylesheets/search.scss
@@ -198,9 +198,10 @@
         font-size: 14px;
         color: #888;
         font-weight: 400;
-
       }
       .products{
+        width: 100%;
+        display: flex;
 
       }
     }
