--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -39,9 +39,7 @@
 @import "user_logout";
 @import "user_credit";
 @import "user_profile_information";
-
-
 @import "search";
-
 @import "category_search";
+@import "products-search";
 
