--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -176,6 +176,25 @@
                     width: 100%;
                     position: relative;
                     display: inline-block;
+                    vertical-align: top;
+                    &:after{
+                      content: "";
+                      border: 1px solid transparent;
+                      bottom: 0;
+                      width: 100%;
+                      height: 100%;
+                      top: 0;
+                      right: 0;
+                      left: 0;
+                      transition-duration: .1s;
+                      z-index: 1;
+                      transition-timing-function: ease-in-out;
+                      position: absolute;
+                    
+                    }
+                    &:hover:after{
+                      border-color: blue;
+                    }
                     &__figure{
                       width: 100%;
                       align-items: center;
@@ -224,7 +243,7 @@
                           vertical-align: top;
                           width: 100%;
                           z-index: 1;
-                        }
+                        }                    
                         &__sold{
                           @include index_sold_badge;
                           &__text{
