--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -41,5 +41,5 @@
 @import "user_profile_information";
 @import "search";
 @import "category_search";
-@import "products-search";
+@import "products_search";
 
