--- a/app/views/products/_products-search.html.haml
+++ b/app/views/products/_products-search.html.haml
@@ -1,4 +1,5 @@
-.data1
+
+%li.data1
   =link_to product_path(product.id),class: "data1__box" do
     .data1__box__information
       .data1__box__information__text
@@ -14,3 +15,7 @@
         = image_tag product.product_images[0].image.to_s, class: "data1__box__information__image" 
     .data1__box__name
       = product.name
+
+
+  
+  
