--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -204,6 +204,7 @@
                       margin: 0;
                       overflow: hidden;
                       z-index: 0;
+                      box-shadow: 3px 3px 3px 3px rgba(0, 0, 0, 0.1);
                       &__figcaption{
                         color: #222;
                         height: 64px;
